Update title and content for smartphone tutorial page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>スマホの使い方</title>
+  <title>スマホ教室 - 選択画面</title>
   <style>
     body {
       font-size: 18px;
@@ -22,7 +22,7 @@
       display: block;
       width: 80%;
       padding: 15px;
-      margin: 15px auto;
+      margin: 12px auto;
       font-size: 18px;
       border: none;
       border-radius: 10px;
@@ -35,11 +35,24 @@
   </style>
 </head>
 <body>
-  <h1> 簡単なスマホの使い方</h1>
-  <p>知りたい操作を選んでね</p>
+  <h1>スマホの使い方教室</h1>
+  <p>知りたい操作を選んでください</p>
 
+  <!-- 基本操作 -->
+  <button onclick="location.href='power.html'">電源の入れ方／切り方</button>
+  <button onclick="location.href='unlock.html'">画面のロック解除</button>
+  <button onclick="location.href='home.html'">ホーム画面の使い方</button>
+  <button onclick="location.href='swipe.html'">画面スワイプ操作</button>
+
+  <!-- アプリ操作 -->
   <button onclick="location.href='call.html'">電話のかけ方</button>
-  <button onclick="location.href='photo.html'">写真の撮り方</button>
-  <button onclick="location.href='app.html'">アプリの使い方</button>
+  <button onclick="location.href='message.html'">メッセージの送り方</button>
+  <button onclick="location.href='camera.html'">写真の撮り方</button>
+  <button onclick="location.href='apps.html'">アプリの使い方</button>
+
+  <!-- 設定・安全 -->
+  <button onclick="location.href='settings.html'">設定アプリの使い方</button>
+  <button onclick="location.href='safety.html'">スマホの安全・トラブル対策</button>
+
 </body>
 </html>
