Update title and heading for smartphone tutorial

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>スマホ教室 - 選択画面</title>
+  <title>簡単なスマホの使い方 - 選択画面</title>
   <style>
     body {
       font-size: 18px;
@@ -45,7 +45,8 @@
   </style>
 </head>
 <body>
-  <h1>スマホの使い方教室</h1>
+  <h1>スマホの使い方 for Pixel 9a</h1>
+  <h1>このホームページは現在制作途中のため、リンク切れになってる場合があります。<h1>
   <p>知りたい操作をカテゴリから選んでください</p>
 
   <!-- 基本操作カテゴリ -->
