Add incomplete app operation and settings categories
Added a section listing incomplete app operation and settings categories.

--- a/index.html
+++ b/index.html
@@ -77,5 +77,37 @@
   <button onclick="location.href='battery.html'">バッテリー確認と充電</button>
   <button onclick="location.href='safety.html'">怪しいメッセージや電話の見分け方</button>
 
+  <h2>まだ未完成</h2>
+    未完成（骨格のみ、内容未作成）
+
+アプリ操作カテゴリ
+
+call.html → 電話のかけ方／受け方
+
+message.html → メッセージの送り方
+
+camera.html → 写真の撮り方／アルバムの見方
+
+apps.html → アプリのインストール／アンインストール
+
+qr.html → QRコードの読み取り
+
+browser.html → ブラウザの使い方
+
+maps.html → Google Mapsの使い方
+
+設定・安全カテゴリ
+
+wifi.html → Wi-Fi接続
+
+brightness.html → 画面の明るさ調整
+
+notifications.html → 通知の管理
+
+permissions.html → アプリの権限確認
+
+battery.html → バッテリー確認と充電
+
+safety.html → 怪しいメッセージや電話の見分け方
 </body>
 </html>
