--- a/apps.html
+++ b/apps.html
@@ -1,68 +1,85 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>アプリのインストール／アンインストール</title>
-  <style>
-    body {
-      font-size: 18px;
-      line-height: 1.6;
-      padding: 20px;
-      font-family: sans-serif;
-      background-color: #fff5e6;
-      color: #333;
-    }
-    h1 {
-      font-size: 24px;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    h2 {
-      font-size: 20px;
-      margin-top: 25px;
-      margin-bottom: 10px;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 5px;
-    }
-    p {
-      margin-bottom: 15px;
-    }
-    a.button {
-      display: block;
-      width: 80%;
-      margin: 20px auto;
-      padding: 15px;
-      text-align: center;
-      background-color: #4caf50;
-      color: white;
-      text-decoration: none;
-      border-radius: 10px;
-      font-size: 18px;
-    }
-    a.button:active {
-      background-color: #45a049;
-    }
-  </style>
-</head>
-<body>
-  <h1>アプリのインストール／アンインストール</h1>
-  
-  <h2>アプリをインストールする</h2>
-  <p>1. ホーム画面から「Play ストア」アプリを探してタップします。</p>
-  <p>2. 上部の検索バーをタップして、欲しいアプリの名前を入力します。</p>
-  <p>3. 検索結果からアプリを選び、「インストール」ボタンをタップします。</p>
-  <p>4. インストールが完了すると「開く」ボタンが表示されます。</p>
-  
-  <h2>アプリをアンインストールする</h2>
-  <p>5. ホーム画面で削除したいアプリのアイコンを長押しします。</p>
-  <p>6. 「アンインストール」または「削除」をタップします。</p>
-  <p>7. 確認画面で「OK」をタップするとアプリが削除されます。</p>
-  
-  <h2>注意事項</h2>
-  <p>・信頼できるアプリのみをインストールしてください。</p>
-  <p>・よく分からないアプリはインストールしないようにしましょう。</p>
 
-  <a class="button" href="index.html">選択画面に戻る</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>アプリのインストール／アンインストール</title>
+    <style>
+        body {
+            font-size: 18px;
+            line-height: 1.6;
+            padding: 20px;
+            font-family: sans-serif;
+            background-color: #fff5e6;
+            color: #333;
+        }
+
+        h1 {
+            font-size: 24px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            font-size: 20px;
+            margin-top: 25px;
+            margin-bottom: 10px;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 5px;
+        }
+
+        p {
+            margin-bottom: 15px;
+        }
+
+        a.button {
+            display: block;
+            width: 80%;
+            margin: 20px auto;
+            padding: 15px;
+            text-align: center;
+            background-color: #4caf50;
+            color: white;
+            text-decoration: none;
+            border-radius: 10px;
+            font-size: 18px;
+        }
+
+        a.button:active {
+            background-color: #45a049;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>アプリのインストール／アンインストール</h1>
+
+    <h2>アプリをインストールする(追加する)</h2>
+    <p>1. ホーム画面から「Play ストア」アプリを探してタップします。</p>
+    <p>2. 下部のバーから、「検索」アイコンをタップし、上部の検索バーをタップして、欲しいアプリの名前を入力します。</p>
+    <p>3. 検索結果からアプリを選び、「インストール」ボタンをタップします。</p>
+    <p>4. インストールが完了すると「開く」ボタンが表示されます。</p>
+    <video controls style="width: 80%; display: block; margin: 20px auto;">
+        <source src="video/apps_1.mp4" type="video/mp4">
+        お使いのブラウザは動画タグをサポートしていません。
+    </video>
+
+    <h2>アプリをアンインストールする(削除する)</h2>
+    <p>5. ホーム画面で削除したいアプリのアイコンを押し続けます。</p>
+    <p>6. 押し続けながら、画面上部に指を動かすと、「アンインストール」のエリアが表示されます。</p>
+    <p>7. 押し続けながら、「アンインストール」のエリアにアイコンを移動させて指を離します。</p>
+    <p>8. 「このアプリをアンインストールしますか？」が表示されたら、「アンインストール」をタップします。</p>
+    <video controls style="width: 80%; display: block; margin: 20px auto;">
+        <source src="video/apps_2.mp4" type="video/mp4">
+        お使いのブラウザは動画タグをサポートしていません。
+    </video>
+
+    <h2>注意事項</h2>
+    <p>・信頼できるアプリのみをインストールしてください。</p>
+    <p>・よく分からないアプリはインストールしないようにしましょう。</p>
+
+    <a class="button" href="index.html">選択画面に戻る</a>
 </body>
+
 </html>
