完成メモ書きを変えた

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <body>
   <h1>スマホの使い方 for Pixel 9a</h1>
   <h1>このホームページは現在制作途中のため、リンク切れになってる場合があります。<h1>
+  <h1>latest update: 2025_12_24</h1>
   <p>知りたい操作をカテゴリから選んでください</p>
 
   <!-- 基本操作カテゴリ -->
@@ -78,36 +79,7 @@
   <button onclick="location.href='safety.html'">怪しいメッセージや電話の見分け方</button>
 
   <h2>まだ未完成</h2>
-    未完成（骨格のみ、内容未作成）
-
-アプリ操作カテゴリ
-
-call.html → 電話のかけ方／受け方
-
-message.html → メッセージの送り方
-
-camera.html → 写真の撮り方／アルバムの見方
-
-apps.html → アプリのインストール／アンインストール
-
-qr.html → QRコードの読み取り
-
-browser.html → ブラウザの使い方
-
-maps.html → Google Mapsの使い方
-
-設定・安全カテゴリ
-
-wifi.html → Wi-Fi接続
-
-brightness.html → 画面の明るさ調整
-
-notifications.html → 通知の管理
-
-permissions.html → アプリの権限確認
-
-battery.html → バッテリー確認と充電
-
-safety.html → 怪しいメッセージや電話の見分け方
+    すべてのページを確認してないため、整合性があってない可能性があります。<br>
+    エンジニアの方へ、Pull RequestやIssueでのご指摘・ご協力をお待ちしております。<br>
 </body>
 </html>
