--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,11 +14,13 @@
       background-color: #fff8f0;
       color: #333;
     }
+
     h1 {
       font-size: 24px;
       text-align: center;
       margin-bottom: 20px;
     }
+
     h2 {
       font-size: 20px;
       margin-top: 25px;
@@ -25,6 +28,7 @@
       border-bottom: 1px solid #ccc;
       padding-bottom: 5px;
     }
+
     button {
       display: block;
       width: 80%;
@@ -36,50 +40,69 @@
       background-color: #ffb347;
       color: white;
     }
+
     button:active {
       background-color: #ff9933;
     }
+
     p {
       text-align: center;
     }
+    .instruction {
+      font-size: 22px;
+      font-weight: bold;
+      margin: 30px 0 20px 0;
+      padding-top: 20px;
+      border-top: 2px solid #ccc;
+      color: #ff6b35;
+    }
   </style>
 </head>
+
 <body>
   <h1>スマホの使い方 for Pixel 9a</h1>
   <h1>このホームページは現在制作途中のため、リンク切れになってる場合があります。<h1>
-  <h1>latest update: 2025_12_24</h1>
-  <p>知りたい操作をカテゴリから選んでください</p>
+      <h1>latest update: 2025_12_24</h1>
 
-  <!-- 基本操作カテゴリ -->
-  <h2>基本操作</h2>
-  <button onclick="location.href='power.html'">電源の入れ方／切り方</button>
-  <button onclick="location.href='unlock.html'">画面のロック解除</button>
-  <button onclick="location.href='home.html'">ホーム画面の使い方</button>
-  <button onclick="location.href='swipe.html'">画面スワイプ操作</button>
-  <button onclick="location.href='volume.html'">音量の調整</button>
-  <button onclick="location.href='screenshot.html'">スクリーンショットの撮り方</button>
+      <h2>用語について</h2>
+      <p>
+        <strong>タップ</strong> → 「ポンと叩く」<br>
+        <strong>スワイプ</strong> → 「なぞる」<br>
+        <strong>アイコン</strong> → 「絵のボタン」
+      </p>
+      <p class="instruction">知りたい操作をタップしてください</p>
 
-  <!-- アプリ操作カテゴリ -->
-  <h2>アプリの使い方</h2>
-  <button onclick="location.href='call.html'">電話のかけ方／受け方</button>
-  <button onclick="location.href='message.html'">メッセージの送り方</button>
-  <button onclick="location.href='camera.html'">写真の撮り方／アルバムの見方</button>
-  <button onclick="location.href='apps.html'">アプリのインストール／アンインストール</button>
-  <button onclick="location.href='qr.html'">QRコードの読み取り</button>
-  <button onclick="location.href='browser.html'">ブラウザの使い方</button>
-  <button onclick="location.href='maps.html'">Google Mapsの使い方</button>
+      <!-- 基本操作カテゴリ -->
+      <h2>基本操作</h2>
+      <button onclick="location.href='power.html'">電源の入れ方／切り方</button>
+      <button onclick="location.href='unlock.html'">画面のロック解除</button>
+      <button onclick="location.href='home.html'">ホーム画面の使い方</button>
+      <button onclick="location.href='swipe.html'">画面スワイプ操作</button>
+      <button onclick="location.href='volume.html'">音量の調整</button>
+      <button onclick="location.href='screenshot.html'">スクリーンショットの撮り方</button>
 
-  <!-- 設定・安全カテゴリ -->
-  <h2>設定・安全</h2>
-  <button onclick="location.href='wifi.html'">Wi-Fi接続</button>
-  <button onclick="location.href='brightness.html'">画面の明るさ調整</button>
-  <button onclick="location.href='notifications.html'">通知の管理</button>
-  <button onclick="location.href='permissions.html'">アプリの権限確認</button>
-  <button onclick="location.href='battery.html'">バッテリー確認と充電</button>
-  <button onclick="location.href='safety.html'">怪しいメッセージや電話の見分け方</button>
+      <!-- アプリ操作カテゴリ -->
+      <h2>アプリの使い方</h2>
+      <button onclick="location.href='call.html'">電話のかけ方／受け方</button>
+      <button onclick="location.href='message.html'">メッセージの送り方</button>
+      <button onclick="location.href='camera.html'">写真の撮り方／アルバムの見方</button>
+      <button onclick="location.href='apps.html'">アプリのインストール／アンインストール</button>
+      <button onclick="location.href='qr.html'">QRコードの読み取り</button>
+      <button onclick="location.href='browser.html'">ブラウザの使い方</button>
+      <button onclick="location.href='maps.html'">Google Mapsの使い方</button>
 
-  <h2>まだ未完成</h2>
-    すべてのページを確認してないため、整合性があってない可能性があります。<br>
-    エンジニアの方へ、Pull RequestやIssueでのご指摘・ご協力をお待ちしております。<br>
+      <!-- 設定・安全カテゴリ -->
+      <h2>設定・安全</h2>
+      <button onclick="location.href='wifi.html'">Wi-Fi接続</button>
+      <button onclick="location.href='brightness.html'">画面の明るさ調整</button>
+      <button onclick="location.href='notifications.html'">通知の管理</button>
+      <button onclick="location.href='permissions.html'">アプリの権限確認</button>
+      <button onclick="location.href='battery.html'">バッテリー確認と充電</button>
+      <button onclick="location.href='safety.html'">怪しいメッセージや電話の見分け方</button>
+
+      <h2>まだ未完成</h2>
+      すべてのページを確認してないため、整合性があってない可能性があります。<br>
+      エンジニアの方へ、Pull RequestやIssueでのご指摘・ご協力をお待ちしております。<br>
 </body>
+
 </html>
