--- a/apps.html
+++ b/apps.html
@@ -2,154 +2,158 @@
 <html lang="ja">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>アプリのインストール／アンインストール</title>
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>アプリのインストール／アンインストール</title>
 
-  <style>
-    :root {
-      --bg-color: #f0f4f8;
-      --card-bg: #ffffff;
-      --primary-color: #006c75;
-      --accent-color: #dbece8;
-      --text-main: #191c1c;
-      --text-sub: #40484b;
-      --shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
-      --shadow-active: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-    body {
-      font-family: 'Noto Sans JP', sans-serif;
-      font-size: 16px;
-      line-height: 1.6;
-      background-color: var(--bg-color);
-      color: var(--text-main);
-      margin: 0;
-      padding: 0;
-    }
+    <style>
+        :root {
+            --bg-color: #f0f4f8;
+            --card-bg: #ffffff;
+            --primary-color: #006c75;
+            --accent-color: #dbece8;
+            --text-main: #191c1c;
+            --text-sub: #40484b;
+            --shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+            --shadow-active: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
 
-    header {
-      background-color: var(--card-bg);
-      padding: 20px 20px;
-      border-bottom-left-radius: 24px;
-      border-bottom-right-radius: 24px;
-      box-shadow: var(--shadow);
-      margin-bottom: 24px;
-    }
+        body {
+            font-family: 'Noto Sans JP', sans-serif;
+            font-size: 16px;
+            line-height: 1.6;
+            background-color: var(--bg-color);
+            color: var(--text-main);
+            margin: 0;
+            padding: 0;
+        }
 
-    h1 {
-      font-size: 22px;
-      color: var(--primary-color);
-      margin: 0;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
+        header {
+            background-color: var(--card-bg);
+            padding: 20px 20px;
+            border-bottom-left-radius: 24px;
+            border-bottom-right-radius: 24px;
+            box-shadow: var(--shadow);
+            margin-bottom: 24px;
+        }
 
-    .back-button {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 40px;
-      height: 40px;
-      background-color: var(--accent-color);
-      border: none;
-      border-radius: 50%;
-      cursor: pointer;
-      color: var(--primary-color);
-      font-size: 24px;
-      text-decoration: none;
-      transition: all 0.2s ease;
-    }
+        h1 {
+            font-size: 22px;
+            color: var(--primary-color);
+            margin: 0;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
 
-    .back-button:hover {
-      transform: scale(1.05);
-    }
+        .back-button {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            background-color: var(--accent-color);
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            color: var(--primary-color);
+            font-size: 24px;
+            text-decoration: none;
+            transition: all 0.2s ease;
+        }
 
-    .back-button:active {
-      transform: scale(0.95);
-    }
+        .back-button:hover {
+            transform: scale(1.05);
+        }
 
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 0 20px 40px;
-    }
+        .back-button:active {
+            transform: scale(0.95);
+        }
 
-    h2 {
-      font-size: 18px;
-      color: var(--text-sub);
-      margin-top: 30px;
-      margin-bottom: 15px;
-      padding-left: 10px;
-      border-left: 4px solid var(--primary-color);
-    }
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 0 20px 40px;
+        }
 
-    p {
-      font-size: 16px;
-      margin-bottom: 15px;
-      line-height: 1.8;
-    }
+        h2 {
+            font-size: 18px;
+            color: var(--text-sub);
+            margin-top: 30px;
+            margin-bottom: 15px;
+            padding-left: 10px;
+            border-left: 4px solid var(--primary-color);
+        }
 
-    video {
-      display: block;
-      margin: 20px auto;
-      max-width: 100%;
-      border-radius: 16px;
-      box-shadow: var(--shadow);
-    }
+        p {
+            font-size: 16px;
+            margin-bottom: 15px;
+            line-height: 1.8;
+        }
 
-    footer {
-      text-align: center;
-      font-size: 12px;
-      color: #999;
-      margin-top: 50px;
-      padding-top: 20px;
-      border-top: 1px solid #ddd;
-    }
-  </style>
+        video {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            border-radius: 16px;
+            box-shadow: var(--shadow);
+        }
+
+        footer {
+            text-align: center;
+            font-size: 12px;
+            color: #999;
+            margin-top: 50px;
+            padding-top: 20px;
+            border-top: 1px solid #ddd;
+        }
+    </style>
 </head>
 
 <body>
-  <header>
-    <h1>
-      <a href="index.html" class="back-button">
-        <span class="material-symbols-rounded">arrow_back</span>
-      </a>
-      アプリのインストール／アンインストール
-    </h1>
-  </header>
+    <header>
+        <h1>
+            <a href="index.html" class="back-button">
+                <span class="material-symbols-rounded">arrow_back</span>
+            </a>
+            アプリのインストール／アンインストール
+        </h1>
+    </header>
 
-  <div class="container">
-    <h2>アプリをインストールする(追加する)</h2>
-    <p>1. ホーム画面から「Play ストア」アプリを探してタップします。</p>
-    <p>2. 下部のバーから、「検索」アイコンをタップし、上部の検索バーをタップして、欲しいアプリの名前を入力します。</p>
-    <p>3. 検索結果からアプリを選び、「インストール」ボタンをタップします。</p>
-    <p>4. インストールが完了すると「開く」ボタンが表示されます。</p>
-    <video controls>
-      <source src="video/apps_1.mp4" type="video/mp4">
-      お使いのブラウザは動画タグをサポートしていません。
-    </video>
+    <div class="container">
+        <h2>アプリをインストールする(追加する)</h2>
+        <p>1. ホーム画面から「Play ストア」アプリを探してタップします。</p>
+        <p>2. 下部のバーから、「検索」アイコンをタップし、上部の検索バーをタップして、欲しいアプリの名前を入力します。</p>
+        <p>3. 検索結果からアプリを選び、「インストール」ボタンをタップします。</p>
+        <p>4. インストールが完了すると「開く」ボタンが表示されます。</p>
+        <video controls>
+            <source src="video/apps_1.mp4" type="video/mp4">
+            お使いのブラウザは動画タグをサポートしていません。
+        </video>
 
-    <h2>アプリをアンインストールする(削除する)</h2>
-    <p>5. ホーム画面で削除したいアプリのアイコンを押し続けます。</p>
-    <p>6. 押し続けながら、画面上部に指を動かすと、「アンインストール」のエリアが表示されます。</p>
-    <p>7. 押し続けながら、「アンインストール」のエリアにアイコンを移動させて指を離します。</p>
-    <p>8. 「このアプリをアンインストールしますか？」が表示されたら、「アンインストール」をタップします。</p>
-    <video controls>
-      <source src="video/apps_2.mp4" type="video/mp4">
-      お使いのブラウザは動画タグをサポートしていません。
-    </video>
+        <h2>アプリをアンインストールする(削除する)</h2>
+        <p>5. ホーム画面で削除したいアプリのアイコンを押し続けます。</p>
+        <p>6. 押し続けながら、画面上部に指を動かすと、「アンインストール」のエリアが表示されます。</p>
+        <p>7. 押し続けながら、「アンインストール」のエリアにアイコンを移動させて指を離します。</p>
+        <p>8. 「このアプリをアンインストールしますか？」が表示されたら、「アンインストール」をタップします。</p>
+        <video controls>
+            <source src="video/apps_2.mp4" type="video/mp4">
+            お使いのブラウザは動画タグをサポートしていません。
+        </video>
 
-    <h2>注意事項</h2>
-    <p>・信頼できるアプリのみをインストールしてください。</p>
-    <p>・よく分からないアプリはインストールしないようにしましょう。</p>
-  </div>
+        <h2>注意事項</h2>
+        <p>・信頼できるアプリのみをインストールしてください。</p>
+        <p>・よく分からないアプリはインストールしないようにしましょう。</p>
+        <footer>
+            <a href="index.html" class="back-to-index">選択画面に戻る</a>
+        </footer>
+    </div>
 </body>
 
 </html>
