powerからhardwareに飛べるようにした。

--- a/hardware.html
+++ b/hardware.html
@@ -251,7 +251,7 @@
     <div class="hardware-section">
       <h2>スマホの右側面</h2>
       
-      <div class="button-description">
+      <div class="button-description" id="power-button">
         <div class="button-name">
           <span class="button-icon">
             <span class="material-symbols-rounded">power_settings_new</span>
@@ -267,7 +267,7 @@
         </ul>
       </div>
 
-      <div class="button-description">
+      <div class="button-description" id="volume-button">
         <div class="button-name">
           <span class="button-icon">
             <span class="material-symbols-rounded">volume_up</span>
