--- a/power.html
+++ b/power.html
@@ -161,15 +161,15 @@
   </header>
 
   <div class="container">
-    <p>メモ、ハードウエアへのリンクを張る</p>
+    <p>💡 <a href="hardware.html#power-button" style="color: var(--primary-color); text-decoration: underline;">電源ボタン</a>や<a href="hardware.html#volume-button" style="color: var(--primary-color); text-decoration: underline;">音量ボタン</a>の場所がわからない場合は、リンクをクリックしてください。</p>
     
     <h2>電源の入れ方 (ボタンで操作)</h2>
-    <p>1. 右側の電源ボタンを約5秒押しします。</p>
+    <p>1. 右側の<a href="hardware.html#power-button" style="color: var(--primary-color); text-decoration: underline;">電源ボタン</a>を約5秒押しします。</p>
     <p>2. 少し待つと、電源が入ります。</p>
     
     <h2>電源の切り方</h2>
     <p><strong>方法1：ボタンから操作</strong></p>
-    <p>1. 右側の電源ボタンと音量大ボタンを同時に1秒押します。</p>
+    <p>1. 右側の<a href="hardware.html#power-button" style="color: var(--primary-color); text-decoration: underline;">電源ボタン</a>と<a href="hardware.html#volume-button" style="color: var(--primary-color); text-decoration: underline;">音量大ボタン</a>を同時に1秒押します。</p>
     <p>2. 「電源を切る」をタップすると、電源が切れます。</p>
 
     <img src="picture/power.png" alt="電源を切るボタン">
